--- a/templates/avis/new.html.twig
+++ b/templates/avis/new.html.twig
@@ -1,9 +1,12 @@
-{% extends 'base.html.twig' %}
+{% extends 'baseBack.html.twig' %}
 
 {% block title %}New Avis{% endblock %}
 
 {% block content %}
-    <h1>Create new Avis</h1>
+    <h1 class="mb-4 text-3xl font-extrabold  text-white md:text-5xl lg:text-6xl">
+                Laisser un
+                <span class="text-transparent bg-clip-text bg-gradient-to-r to-emerald-600 from-sky-400">avis</span>
+            </h1>
 
     {{ include('avis/_form.html.twig') }}
 
