--- a/templates/evenement/index.html.twig
+++ b/templates/evenement/index.html.twig
@@ -3,7 +3,10 @@
 {% block title %}Evenement Index{% endblock %}
 
 {% block content %}
-    <h1>Liste des événements</h1>
+    <h1 class="mb-4 text-3xl font-extrabold  text-white md:text-5xl lg:text-6xl">
+                Liste des
+                <span class="text-transparent bg-clip-text bg-gradient-to-r to-emerald-600 from-sky-400">évènements</span>
+            </h1>
 
     <div style="width:50%">
         <table class="table table-striped table-hover">
