--- a/templates/evenement/index_front.html.twig
+++ b/templates/evenement/index_front.html.twig
@@ -1,9 +1,13 @@
 {% extends 'base.html.twig' %}
 
 {% block content %}
-    <h1>Liste des événements</h1>
+    <h1 class="mb-4 text-3xl font-extrabold  text-white md:text-5xl lg:text-6xl">
+                Liste des
+                <span class="text-transparent bg-clip-text bg-gradient-to-r to-emerald-600 from-sky-400">évènements</span>
+            </h1>
 
-    <table class="table" >
+    <div style="width:50%">
+        <table class="table table-striped table-hover">
         <thead>
             <tr>
                 <th>Nom événement</th>
@@ -29,5 +33,8 @@
         {% endfor %}
         </tbody>
     </table>
+    
 
+    </div>
+    {{ knp_pagination_render(evenements) }}
 {% endblock %}
