--- a/templates/evenement/new.html.twig
+++ b/templates/evenement/new.html.twig
@@ -1,9 +1,12 @@
-{% extends 'base.html.twig' %}
+{% extends 'baseBack.html.twig' %}
 
 {% block title %}New Evenement{% endblock %}
 
 {% block content %}
-    <h1>Créer un nouvel Evènement</h1>
+    <h1 class="mb-4 text-3xl font-extrabold  text-white md:text-5xl lg:text-6xl">
+                Créer un nouvel
+                <span class="text-transparent bg-clip-text bg-gradient-to-r to-emerald-600 from-sky-400">évènement</span>
+            </h1>
 
     {{ include('evenement/_form.html.twig') }}
 
