--- a/templates/evenement/show.html.twig
+++ b/templates/evenement/show.html.twig
@@ -3,9 +3,13 @@
 {% block title %}Evenement{% endblock %}
 
 {% block content %}
-    <h1>Evenement</h1>
+    <h1 class="mb-4 text-3xl font-extrabold  text-white md:text-5xl lg:text-6xl">
+                Détails des
+                <span class="text-transparent bg-clip-text bg-gradient-to-r to-emerald-600 from-sky-400">évènements</span>
+            </h1>
 
-    <table class="table">
+<div style="width:50%">
+    <table class="table table-striped table-hover">
         <tbody>
             <tr>
                 <th>ID événement</th>
@@ -29,11 +33,13 @@
             </tr>
         </tbody>
     </table>
+</div>
 
-    <a href="{{ path('app_evenement_edit', {'idevenement': evenement.idevenement}) }}">Modifier</a>
+    
+    <button class="btn btn-primary" onclick="window.location.href='{{ path('app_evenement_edit', {'idevenement': evenement.idevenement}) }}'">Modifier</button>
     {{ include('evenement/_delete_form.html.twig') }}
-    <a href="{{ path('app_avis_index', {'idevenement': evenement.idevenement}) }}">Voir les avis</a>
-    <a href="{{ path('app_evenement_index') }}">Retour</a>
+    <button class="btn btn-primary" onclick="window.location.href='{{ path('app_avis_index', {'idevenement': evenement.idevenement}) }}'">Voir les avis</button>
+    <button class="btn btn-primary" onclick="window.location.href='{{ path('app_evenement_index') }}'">Retour</button>
 
     
 {% endblock %}
