--- a/templates/evenement/show_front.html.twig
+++ b/templates/evenement/show_front.html.twig
@@ -3,9 +3,13 @@
 {% block title %}Evenement{% endblock %}
 
 {% block content %}
-    <h1>Evènement</h1>
+    <h1 class="mb-4 text-3xl font-extrabold  text-white md:text-5xl lg:text-6xl">
+                Détails des
+                <span class="text-transparent bg-clip-text bg-gradient-to-r to-emerald-600 from-sky-400">évènements</span>
+            </h1>
 
-    <table class="table">
+    <div style="width:50%">
+        <table class="table table-striped table-hover">
         <tbody>
             <tr>
                 <th>Nom événement</th>
@@ -25,8 +29,19 @@
             </tr>
         </tbody>
     </table>
+    </div>
 
-    <a href="{{ path('app_avis_front')}}">Voir les avis</a>
-    <a href="{{ path('app_evenement_front') }}">Retour à la liste</a>
+    <img src="{{ asset('uploads/evenements/' ~ evenement.imageFilename) }}" alt="{{ evenement.nomEvenement }}">
+
+
+    {% if weather %}
+        <h3>Weather</h3>
+        <p>Temperature: {{ weather.temperature }}°C</p>
+        <p>Description: {{ weather.description }}</p>
+        <img src="{{ weather.icon }}" alt="Weather icon">
+    {% endif %}
+
+    <button class="btn btn-primary" onclick="window.location.href='{{ path('app_avis_index', {'idevenement': evenement.idevenement}) }}'">Voir les avis</button>
+    <button class="btn btn-primary" onclick="window.location.href='{{ path('app_evenement_front') }}'">Retour</button>
 
 {% endblock %}
