Added multi-criteria search feature and updated adminDashboard

--- a/templates/formation/index.html.twig
+++ b/templates/formation/index.html.twig
@@ -34,7 +34,7 @@
                 Formation de
                 <mark class="px-2 text-white bg-blue-600 rounded bg-blue-500">QUALITÉ</mark>
                 avec nos meilleurs
-                <span class="underline underline-offset-3 decoration-8 decoration-blue-600 text-white">FORMATEURS:</span>
+                <span class="underline underline-offset-3 decoration-8 decoration-blue-600 text-white">FORMATEURS</span>
             </h1>
 
 
