--- a/assets/styles/formation.css
+++ b/assets/styles/formation.css
@@ -60,13 +60,10 @@
 
 .panel {
     display: flex;
-    flex-direction: column;
-    flex:1;
-    background: rgb(255,255,255,0.05);
-    border: 2px solid transparent;
-    border-radius: 7px;
-    padding: 45px;
-    min-width: 60%;
+    justify-content: center;
+    column-gap: 1rem;
+    background: rgb(255,255,255,0.1);
+
 }
 
 .ligne {
