--- a/templates/formation/show.html.twig
+++ b/templates/formation/show.html.twig
@@ -94,10 +94,9 @@
                                          <svg aria-hidden="true" class="mx-auto mb-4 text-gray-400 w-14 h-14 dark:text-gray-200" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8v4m0 4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z"></path></svg>
                                          <h3 class="mb-5 text-lg font-normal text-gray-500 dark:text-gray-400">Etes vous sure vous voulez annuler votre inscription?</h3>
                                          <div class="text-sm text-blue-800">Si votre inscription n'a pas dépassé 48 heures, </div>
-                                         <div class="mb-5 text-sm text-blue-800">vous serez remboursé(e).</div>
-                                         <button data-modal-hide="popup-modal" type="button" class="text-white bg-red-600 hover:bg-red-800 focus:ring-4 focus:outline-none focus:ring-red-300 dark:focus:ring-red-800 font-medium rounded-lg text-sm inline-flex items-center px-5 py-2.5 text-center mr-2">
-                                             <a  href="{{ path('app_formation_refund',{ 'id': formation.idFormation}) }}">Oui</a>
-                                         </button>
+                                         <div class="mb-5 text-sm text-blue-800">vous serez remboursé(e) totalement.</div>
+                                             <a data-modal-hide="popup-modal" type="button" class="text-white bg-red-600 hover:bg-red-800  font-medium rounded-lg text-sm inline-flex items-center px-5 py-2.5 text-center mr-2"
+                                                href="{{ path('app_formation_refund',{ 'id': formation.idFormation}) }}">Oui</a>
                                          <button data-modal-hide="popup-modal" type="button" class="text-gray-500 bg-white hover:bg-gray-100 focus:ring-4 focus:outline-none focus:ring-gray-200 rounded-lg border border-gray-200 text-sm font-medium px-5 py-2.5 hover:text-gray-900 focus:z-10 dark:bg-gray-700 dark:text-gray-300 dark:border-gray-500 dark:hover:text-white dark:hover:bg-gray-600 dark:focus:ring-gray-600">Non</button>
                                      </div>
                                  </div>
@@ -203,37 +202,58 @@
                                 </div>
                             </div>
                         </div>
+
                         <button data-modal-target="avis-modal" data-modal-toggle="avis-modal" class="ml-auto inline-flex items-center justify-center  px-2 py-1 text-base font-medium text-center text-white bg-blue-700 rounded hover:bg-blue-800">
                             <a>Donner votre Avis</a>
                         </button>
                     {% endif %}
                 </div>
                 <div class="ratings">
-                    <p class="text-left block text-sm text-left font-medium text-gray-900">{{ stats['total'] }} évaluations au total</p>
+                    <div class="flex items-center justify-between">
+                        <p class="text-left block text-sm text-left font-medium text-gray-900 mr-2">{{ stats['total'] }} évaluations au total</p>
+                        <div class="flex items-center">
+                            {% if userRating != 0 %}
+                                <p class="text-blue-900 font-medium mr-2">Votre note:</p>
+                                {% for i in range(1, userRating ) %}
+                                    <svg aria-hidden="true" class="w-5 h-5 text-yellow-400" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><title>Fourth star</title><path d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z"></path></svg>
+                                {% endfor %}
+                                {% set x = 5 - userRating  %}
+                                    {% if x > 0 %}
+                                        {%  for i in range(1,x  )%}
+                                            <svg aria-hidden="true" class="w-5 h-5 text-gray-300" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><title>Fifth star</title><path d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z"></path></svg>
+                                        {% endfor %}
+                                    {% endif %}
+                                <p class="ml-2 text-sm font-medium text-blue-900">{{ userRating  }}/5</p>
+                            {% endif %}
+                        </div>
+                    </div>
+
+
+
                     <div>
                         <div class="flex items-center mt-4">
-                            <span class="text-sm font-medium text-blue-600 dark:text-blue-500">5 star</span>
+                            <span class="text-sm font-medium text-blue-600 dark:text-blue-500">5 stars</span>
                             <div class="w-2/4 h-5 mx-4 bg-white rounded dark:bg-gray-700">
                                 <div class="h-5 bg-yellow-400 rounded" style="width: {{ stats['perc_5_stars'] }}%"></div>
                             </div>
                             <span class="text-sm font-medium text-blue-600 dark:text-blue-500">{{ stats['perc_5_stars'] }}%</span>
                         </div>
                         <div class="flex items-center mt-4">
-                            <span class="text-sm font-medium text-blue-600 dark:text-blue-500">4 star</span>
+                            <span class="text-sm font-medium text-blue-600 dark:text-blue-500">4 stars</span>
                             <div class="w-2/4 h-5 mx-4 bg-white rounded dark:bg-gray-700">
                                 <div class="h-5 bg-yellow-400 rounded" style="width: {{ stats['perc_4_stars'] }}%"></div>
                             </div>
                             <span class="text-sm font-medium text-blue-600 dark:text-blue-500">{{ stats['perc_4_stars'] }}%</span>
                         </div>
                         <div class="flex items-center mt-4">
-                            <span class="text-sm font-medium text-blue-600 dark:text-blue-500">3 star</span>
+                            <span class="text-sm font-medium text-blue-600 dark:text-blue-500">3 stars</span>
                             <div class="w-2/4 h-5 mx-4 bg-white rounded dark:bg-gray-700">
                                 <div class="h-5 bg-yellow-400 rounded" style="width: {{ stats['perc_3_stars'] }}%"></div>
                             </div>
                             <span class="text-sm font-medium text-blue-600 dark:text-blue-500">{{ stats['perc_3_stars'] }}%</span>
                         </div>
                         <div class="flex items-center mt-4">
-                            <span class="text-sm font-medium text-blue-600 dark:text-blue-500">2 star</span>
+                            <span class="text-sm font-medium text-blue-600 dark:text-blue-500">2 stars</span>
                             <div class="w-2/4 h-5 mx-4 bg-white rounded dark:bg-gray-700">
                                 <div class="h-5 bg-yellow-400 rounded" style="width: {{ stats['perc_2_stars'] }}%"></div>
                             </div>
