--- a/templates/reclamation/show.html.twig
+++ b/templates/reclamation/show.html.twig
@@ -31,6 +31,11 @@
                 <th>nombre vue</th>
                 <td>{{ reclamation.nbr_vue }}</td>
             </tr>
+<tr>
+                <th>Avis</th>
+                <td>{{ suiviReclamation.avis }}</td>
+            </tr>
+
 
         </tbody>
     </table>
