--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -58,6 +58,11 @@
 								<li class="hover:scale-125 duration-300 py-1 hover:text-teal-400">
 									<a class="cursor-pointer">Contact</a>
 								</li>
+								<button type="button" class="relative inline-flex items-center p-3 text-sm font-medium text-center text-white bg-blue-700 rounded-lg hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">
+  <svg class="w-6 h-6" aria-hidden="true" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path d="M2.003 5.884L10 9.882l7.997-3.998A2 2 0 0016 4H4a2 2 0 00-1.997 1.884z"></path><path d="M18 8.118l-8 4-8-4V14a2 2 0 002 2h12a2 2 0 002-2V8.118z"></path></svg>
+  <span class="sr-only">Notifications</span>
+  <div class="absolute inline-flex items-center justify-center w-6 h-6 text-xs font-bold text-white bg-red-500 border-2 border-white rounded-full -top-2 -right-2 dark:border-gray-900">0</div>
+</button>
 								<button class="bg-transparent border-2 border-blue-700 rounded hover:bg-blue-400 text-white font-bold py-2 px-4  hover:border-blue-500 rounded">
 									<p class="font-bold">Se Connecter</p>
 
