--- a/templates/reclamation/edit.html.twig
+++ b/templates/reclamation/edit.html.twig
@@ -2,10 +2,14 @@
 
 {% block title %}Edit Reclamation{% endblock %}
 
-{% block body %}
+{% block content %}
     <h1>Edit Reclamation</h1>
-
+ {% for flashMessage in app.session.flashbag.get('warning') %}
+            <div class="alert alert-info bg-red-100 flex flex-col w-full items-center justify-center text-center border border-red-400 text-red-700   py-4 mb-6 font-medium rounded relative shadow-2xl">
+                {{ flashMessage }}</div>
+        {% endfor %}
     {{ include('reclamation/_form.html.twig', {'button_label': 'Update'}) }}
+   
 
     <a href="{{ path('app_reclamation_front') }}">back to list</a>
 
