--- a/templates/evenement/index.html.twig
+++ b/templates/evenement/index.html.twig
@@ -9,6 +9,15 @@
             </h1>
 
     <div style="width:50%">
+        <form action="{{ path('app_avis_front') }}" method="GET">
+            <div class="form-group">
+                <label for="order_by">Order by:</label>
+                <select id="order_by" name="order_by" class="form-control" onchange="this.form.submit()">
+                    <option value="date_asc" {% if app.request.query.get('order_by') == 'date_asc' %}selected{% endif %}>Date Ascending</option>
+                    <option value="date_desc" {% if app.request.query.get('order_by') == 'date_desc' %}selected{% endif %}>Date Descending</option>
+                </select>
+            </div>
+        </form>
         <table class="table table-striped table-hover">
             <thead>
                 <tr>
@@ -39,6 +48,10 @@
             {% endfor %}
             </tbody>
         </table>
+    </div>
+
+    <div>
+        Affichage de {{ totalResults }} événement(s)
     </div>
 
     <button class="btn btn-primary" onclick="window.location.href='{{ path('app_evenement_new') }}'">Créer un événement</button>
