--- a/templates/avis/new.html.twig
+++ b/templates/avis/new.html.twig
@@ -1,4 +1,4 @@
-{% extends 'baseBack.html.twig' %}
+{# {% extends 'base.html.twig' %}
 
 {% block title %}New Avis{% endblock %}
 
@@ -11,4 +11,21 @@
     {{ include('avis/_form.html.twig') }}
 
     <a href="{{ path('app_avis_index') }}">Retour</a>
+{% endblock %}
+#}
+
+{% extends 'base.html.twig' %}
+
+{% block content %}
+    <h1 class="mb-4 text-3xl font-extrabold  text-white md:text-5xl lg:text-6xl">
+        Laissez un
+        <span class="text-transparent bg-clip-text bg-gradient-to-r to-emerald-600 from-sky-400">avis</span>
+    </h1>
+
+    <div style="width:50%">
+        {{ form_start(form, {'attr': {'novalidate': 'novalidate'}}) }}
+        {{ form_widget(form) }}
+        <button type="submit" class="btn btn-primary">Envoyer</button>
+        {{ form_end(form) }}
+    </div>
 {% endblock %}
