--- a/templates/evenement/index_front.html.twig
+++ b/templates/evenement/index_front.html.twig
@@ -7,6 +7,16 @@
             </h1>
 
     <div style="width:50%">
+        <form action="{{ path('app_evenement_front') }}" method="GET">
+            <div class="form-group">
+                <label for="order_by">Order by:</label>
+                <select id="order_by" name="order_by" class="form-control" onchange="this.form.submit()">
+                    <option value="date_asc" {% if app.request.query.get('order_by') == 'date_asc' %}selected{% endif %}>Date Ascending</option>
+                    <option value="date_desc" {% if app.request.query.get('order_by') == 'date_desc' %}selected{% endif %}>Date Descending</option>
+                </select>
+            </div>
+        </form>
+
         <table class="table table-striped table-hover">
         <thead>
             <tr>
@@ -33,8 +43,15 @@
         {% endfor %}
         </tbody>
     </table>
-    
-
     </div>
-    {{ knp_pagination_render(evenements) }}
+
+    <div>
+        {{ resultMessage }}
+    </div>
+
+
+    <div class="navigation flex justify-center mb-8">
+        {{ knp_pagination_render(evenements) }}
+    </div>
+
 {% endblock %}
