--- a/templates/reclamation/etat.html.twig
+++ b/templates/reclamation/etat.html.twig
@@ -2,7 +2,7 @@
 
 {% block title %}Edit Etat Reclamation{% endblock %}
 
-{% block body %}
+{% block content %}
     <h1>Edit Etat Reclamation</h1>
 
    
