--- a/templates/reclamation/repondre.html.twig
+++ b/templates/reclamation/repondre.html.twig
@@ -2,7 +2,7 @@
 
 {% block title %}Répondre à la réclamation n°{{ reclamation.idReclamation }}{% endblock %}
 
-{% block body %}
+{% block content %}
     <h1>Répondre à la réclamation n°{{ reclamation.idReclamation }}</h1>
 
 {{ form_start(form) }}
