--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -1,8 +1,10 @@
+@import "style.css";
+@import "formation.css";
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-@import "style.css";
 
 .hidden {
     display: none;
