--- a/templates/reclamation/front.html.twig
+++ b/templates/reclamation/front.html.twig
@@ -1,73 +1,112 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Reclamation index{% endblock %}
+{% block stylesheets %}
+    {{ parent() }}
+    <style>
+        footer {
+            margin-top: 0; !important;
+        }
+        .slider-range-display {
+            background-color: #f5f5f5;
+            border: 1px solid #ccc;
+            border-radius: 3px;
+            color: #333;
+            font-size: 14px;
+            font-weight: bold;
+            padding: 5px;
+            width: 130px;
+        }
+
+    </style>
+{% endblock %}
+{% block javascripts %}
+   
+
+{% endblock %}
 
 {% block content %}
 
-    <h1 class="mb-4 text-4xl font-extrabold leading-none tracking-tight text-gray-900 md:text-5xl lg:text-6xl dark:text-white text-center">
-		Liste
-		<span class="text-blue-600 dark:text-blue-500">des Réclamations</span>
-	</h1>
-<div class="relative overflow-x-auto shadow-md sm:rounded-lg">
-    <table class="w-full text-sm text-left text-gray-500 dark:text-gray-400">
-        <thead class="text-xs text-gray-700 uppercase bg-gray-50 dark:bg-gray-700 dark:text-gray-400">
-            <tr>
-                 <th scope="col" class="px-6 py-3">
-						<div class="flex items-center">
-							Date Réclamation
-							<a href="#">
-								<svg xmlns="http://www.w3.org/2000/svg" class="w-3 h-3 ml-1" aria-hidden="true" fill="currentColor" viewbox="0 0 320 512"><path d="M27.66 224h264.7c24.6 0 36.89-29.78 19.54-47.12l-132.3-136.8c-5.406-5.406-12.47-8.107-19.53-8.107c-7.055 0-14.09 2.701-19.45 8.107L8.119 176.9C-9.229 194.2 3.055 224 27.66 224zM292.3 288H27.66c-24.6 0-36.89 29.77-19.54 47.12l132.5 136.8C145.9 477.3 152.1 480 160 480c7.053 0 14.12-2.703 19.53-8.109l132.3-136.8C329.2 317.8 316.9 288 292.3 288z"/></svg>
-							</a>
-						</div>
-					</th>
-                <th scope="col" class="px-6 py-3">
-						<div class="flex items-center">
-							Description
-							<a href="#">
-								<svg xmlns="http://www.w3.org/2000/svg" class="w-3 h-3 ml-1" aria-hidden="true" fill="currentColor" viewbox="0 0 320 512"><path d="M27.66 224h264.7c24.6 0 36.89-29.78 19.54-47.12l-132.3-136.8c-5.406-5.406-12.47-8.107-19.53-8.107c-7.055 0-14.09 2.701-19.45 8.107L8.119 176.9C-9.229 194.2 3.055 224 27.66 224zM292.3 288H27.66c-24.6 0-36.89 29.77-19.54 47.12l132.5 136.8C145.9 477.3 152.1 480 160 480c7.053 0 14.12-2.703 19.53-8.109l132.3-136.8C329.2 317.8 316.9 288 292.3 288z"/></svg>
-							</a>
-						</div>
-					</th>
-                 <th scope="col" class="px-6 py-3">
-						<div class="flex items-center">
-							Type Réclamation
-							<a href="#">
-								<svg xmlns="http://www.w3.org/2000/svg" class="w-3 h-3 ml-1" aria-hidden="true" fill="currentColor" viewbox="0 0 320 512"><path d="M27.66 224h264.7c24.6 0 36.89-29.78 19.54-47.12l-132.3-136.8c-5.406-5.406-12.47-8.107-19.53-8.107c-7.055 0-14.09 2.701-19.45 8.107L8.119 176.9C-9.229 194.2 3.055 224 27.66 224zM292.3 288H27.66c-24.6 0-36.89 29.77-19.54 47.12l132.5 136.8C145.9 477.3 152.1 480 160 480c7.053 0 14.12-2.703 19.53-8.109l132.3-136.8C329.2 317.8 316.9 288 292.3 288z"/></svg>
-							</a>
-						</div>
-					</th>
-                <th scope="col" class="px-6 py-3">
-						<div class="flex items-center">
-							Email
-							<a href="#">
-								<svg xmlns="http://www.w3.org/2000/svg" class="w-3 h-3 ml-1" aria-hidden="true" fill="currentColor" viewbox="0 0 320 512"><path d="M27.66 224h264.7c24.6 0 36.89-29.78 19.54-47.12l-132.3-136.8c-5.406-5.406-12.47-8.107-19.53-8.107c-7.055 0-14.09 2.701-19.45 8.107L8.119 176.9C-9.229 194.2 3.055 224 27.66 224zM292.3 288H27.66c-24.6 0-36.89 29.77-19.54 47.12l132.5 136.8C145.9 477.3 152.1 480 160 480c7.053 0 14.12-2.703 19.53-8.109l132.3-136.8C329.2 317.8 316.9 288 292.3 288z"/></svg>
-							</a>
-						</div>
-					</th>
-                <th>Actions</th>
-            </tr>
-        </thead>
-        <tbody>
-          {% for reclamation in reclamations %}
-            <tr class="bg-white border-b dark:bg-gray-800 dark:border-gray-700">
-                <td class="px-6 py-4">{{ reclamation.dateReclamation ? reclamation.dateReclamation|date('Y-m-d') : '' }}</td>
-                <td class="px-6 py-4">{{ reclamation.description }}</td>
-                <td class="px-6 py-4">{{ reclamation.typeReclamation }}</td>
-                <td class="px-6 py-4">{{ reclamation.email }}</td>
-                <td>
-                    <a href="{{ path('app_reclamation_edit', {'idReclamation': reclamation.idReclamation}) }}" class="font-medium text-blue-600 dark:text-blue-500 hover:underline">edit</a>
-                </td>
-                <td>
-                    <a href="{{ path('app_reclamation_messages', {'idReclamation': reclamation.idReclamation}) }}" class="font-medium text-blue-600 dark:text-blue-500 hover:underline">messages</a>
-                </td>
-            </tr>
-        {% else %}
-            <tr>
-                <td colspan="6">no records found</td>
-            </tr>
-        {% endfor %}
-        </tbody>
-    </table>
+        
 
-    
+        
+
+                    <!-- Table section -->
+                    <div class="w-full md:w-3/4 px-4">
+                        <div class="p-4 rounded">
+                            <!-- Table content -->
+                            <div>
+                                <table class="text-sm text-left w-full">
+                                    <caption class="p-5 text-lg font-bold text-left  text-white shadow-2xl">
+                                        <div class="flex">
+                                            <div>
+                                                Mes Reclamations:
+                                                <p class="mt-1 text-sm font-normal white">Vous pouvez gérer vos Reclamations éxistantes ou ajouter une nouvelle Reclamation.</p>
+                                            </div>
+
+                                            <a href="{{ path('app_reclamation_new')}}" class="ml-auto inline-flex items-center justify-center self-end px-2 py-2 text-sm font-medium text-center text-white bg-blue-600 rounded-lg hover:bg-blue-700">
+                                                Ajouter une Reclamation
+                                                <svg class="w-5 h-5 ml-2 -mr-1" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M10.293 3.293a1 1 0 011.414 0l6 6a1 1 0 010 1.414l-6 6a1 1 0 01-1.414-1.414L14.586 11H3a1 1 0 110-2h11.586l-4.293-4.293a1 1 0 010-1.414z" clip-rule="evenodd"></path></svg>
+                                            </a>
+                                        </div>
+                                    </caption>
+
+
+
+                                    <thead class="text-xs  whitespace-nowrap uppercase bg-gray-700 text-gray-300">
+
+                                    <tr>
+                                        <th scope="col" class="px-6 py-3">
+                                            Date
+                                        </th>
+                                        <th scope="col"  class="px-6 py-3" >
+                                            Déscription
+                                        </th>
+                                        <th scope="col" class="px-6 py-3">
+                                            Type Reclamation
+                                        </th>
+                                        <th scope="col" class="px-6 py-3">
+                                            Action
+                                        </th>
+                                       <th scope="col" class="px-6 py-3">
+                                           Message
+                                        </th>
+
+
+                                    </tr>
+                                    </thead>
+                                    <tbody id="prev-tab">
+                                     {% for reclamation in reclamations %}
+                                        <tr class="ligne text-white  whitespace-nowrap ">
+                                            <th scope="row" class="px-6 py-4">
+                                               {{ reclamation.dateReclamation ? reclamation.dateReclamation|date('Y-m-d') : '' }}
+                                            </th>
+                                            <td class="px-6 py-4" style="min-width: 250px;">
+                                               {{ reclamation.description }}
+                                            </td>
+                                            <td class="px-6 py-4">
+                                               {{ reclamation.typeReclamation }} 
+                                            </td>
+                                            
+                                           <td class="px-6 py-4 whitespace-no-wrap">
+                    <a href="{{ path('app_reclamation_edit', {'idReclamation': reclamation.idReclamation}) }}" class="font-medium  hover:underline ml-3">edit</a>
+                    <td class="px-6 py-4 whitespace-no-wrap">
+                    <a href="{{ path('app_reclamation_messages', {'idReclamation': reclamation.idReclamation}) }}" class=" hover:underline ml-3">messages</a>
+                </td>
+                                        </tr>
+                                    {% endfor %}
+                                    </tbody>
+                                    <tbody id="new-tab"></tbody>
+                                </table>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+
+
+       
+
+
+
 {% endblock %}
