--- a/templates/reclamation/index.html.twig
+++ b/templates/reclamation/index.html.twig
@@ -28,7 +28,7 @@
 							</a>
 						</div>
 					</th>
-                <th scope="col" class="px-6 py-3">
+                <th scope="col" class="px-6 py-3 ">
 						<div class="flex items-center">
 							Description
 							<a href="#">
@@ -57,7 +57,7 @@
         </thead>
         <tbody>
         {% for reclamation in pagination %}
-            <tr class="bg-white border-b dark:bg-gray-800 dark:border-gray-700">
+            <tr class="border-b border-gray-400 hover:bg-gray-100">
                 <td class="px-6 py-4">{{ reclamation.idReclamation }}</td>
                 <td class="px-6 py-4">{{ reclamation.dateReclamation ? reclamation.dateReclamation|date('Y-m-d') : '' }}</td>
                 <td class="px-6 py-4">{{ reclamation.description }}</td>
@@ -69,18 +69,14 @@
 
                 <td>
                     <a href="{{ path('app_reclamation_show', {'idReclamation': reclamation.idReclamation}) }}"class="font-medium text-blue-600 dark:text-blue-500 hover:underline">show</a>
-                    {{ include('reclamation/_delete_form.html.twig') }}
-					<a href="{{ path('app_reclamation_repondre', {'idReclamation': reclamation.idReclamation}) }}" class="font-medium text-blue-600 dark:text-blue-500 hover:underline">Répondre</a>
-
-
-
-<form method="POST" action="{{ path('app_sms') }}">
-    <div class="form-group">
-        <label for="toPhoneNumber">Enter a phone number:</label>
-        <input type="text" name="toPhoneNumber" id="toPhoneNumber" class="form-control">
-    </div>
-    <button type="submit" class="btn btn-primary">Send SMS</button>
+                    <form method="post" action="{{ path('app_reclamation_delete', {'idReclamation': reclamation.idReclamation}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
+    <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ reclamation.idReclamation) }}">
+    <button class="btn">Delete</button>
 </form>
+
+
+
+
 
           
                 </td>
@@ -94,9 +90,10 @@
     </table>
     <br>
     </div>
-    <div class="pagination">
+    <div class="pagination flex justify-center mt-8">
     {{ knp_pagination_render(pagination, 'pagination.html.twig') }}
 </div>
+
 
    
                     </div>
