--- a/templates/formation/show.html.twig
+++ b/templates/formation/show.html.twig
@@ -263,7 +263,7 @@
                             <span class="text-sm font-medium text-blue-600 dark:text-blue-500">{{ stats['perc_2_stars'] }}%</span>
                         </div>
                         <div class="flex items-center mt-4">
-                            <span class="text-sm font-medium text-blue-600 dark:text-blue-500">1 star</span>
+                            <span class="text-sm font-medium text-blue-600 dark:text-blue-500 mr-2">1 star</span>
                             <div class="w-2/4 h-5 mx-4 bg-white rounded dark:bg-gray-700">
                                 <div class="h-5 bg-yellow-400 rounded" style="width: {{ stats['perc_1_stars'] }}%"></div>
                             </div>
