--- a/templates/admin/usersBack.html.twig
+++ b/templates/admin/usersBack.html.twig
@@ -30,28 +30,28 @@
                             <table class="table">
                                 <thead class=" text-primary">
                                 <th>
-                                    nom
+                                    Nom
                                 </th>
                                 <th>
-                                    prenom
+                                    Prenom
                                 </th>
                                 <th>
-                                    email
+                                    Email
                                 </th>
                                 <th>
-                                    numero
+                                    Numero
                                 </th>
                                 <th>
-                                    adresse
+                                    Adresse
                                 </th>
                                 <th>
-                                    age
+                                    Age
                                 </th>
                                 <th>
-                                    modifier
+                                    Modifier
                                 </th>
                                 <th class="text-left">
-                                    supprimer
+                                    Supprimer
                                 </th>
                                 </thead>
                                 <tbody id="prev-tab">
@@ -85,7 +85,7 @@
                                                     <option value=3 {% if user.idRole.idRole == 3 %}selected{% endif %}>Recruteur</option>
                                                 </select>
 
-                                                <button type="submit">Modifier</button>
+                                                <button type="submit" class="btn btn-primary">Modifier</button>
                                             </form>
 
 
