--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -65,29 +65,32 @@
 						<li class="hover:scale-125 duration-300 py-1 hover:text-teal-400">
 							<a class="cursor-pointer" href="{{ path('app_home') }}">Acceuil</a>
 						</li>
-						<button id="dropdownNavbarLink" data-dropdown-toggle="dropdownNavbar" class="flex items-center justify-between  py-1 pl-2 pr-3 hover:scale-125 duration-300 py-1 hover:text-teal-400">Emplois
-							<svg class="w-5 h-5 ml-1" aria-hidden="true" fill="currentColor" viewbox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
-								<path fill-rule="evenodd" d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z" clip-rule="evenodd"></path>
-							</svg>
-						</button>
-						<!-- Dropdown menu -->
-						<div id="dropdownNavbar" class="z-10 hidden font-normal bg-white divide-y divide-gray-100 rounded-lg shadow w-44 dark:bg-gray-700 dark:divide-gray-600">
-							<ul class="py-2 text-sm text-gray-700 dark:text-gray-400" aria-labelledby="dropdownLargeButton">
-								<li>
-									<a href="{{ path('app_emploi_front') }}" class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Liste Des Emplois</a>
-								</li>
-								{% if  app.user %}
+						<li>
+							<button id="dropdownNavbarLink" data-dropdown-toggle="dropdownNavbar" class="flex items-center justify-between  py-1 pl-2 pr-3 hover:scale-125 duration-300 py-1 hover:text-teal-400">Emplois
+								<svg class="w-5 h-5 ml-1" aria-hidden="true" fill="currentColor" viewbox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
+									<path fill-rule="evenodd" d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z" clip-rule="evenodd"></path>
+								</svg>
+							</button>
+							<!-- Dropdown menu -->
+							<div id="dropdownNavbar" class="z-10 hidden font-normal bg-white divide-y divide-gray-100 rounded-lg shadow w-44 dark:bg-gray-700 dark:divide-gray-600">
+								<ul class="py-2 text-sm text-gray-700 dark:text-gray-400" aria-labelledby="dropdownLargeButton">
 									<li>
-										<a href="{{ path('app_favoris_index') }}" class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Mes Emplois Favoris</a>
+										<a href="{{ path('app_emploi_front') }}" class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Liste Des Emplois</a>
 									</li>
-									<li>
-										<a href="{{ path('app_candidature_index') }}" class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Mes Candidatures</a>
-									</li>
+									{% if  app.user %}
+										<li>
+											<a href="{{ path('app_favoris_index') }}" class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Mes Emplois Favoris</a>
+										</li>
+										<li>
+											<a href="{{ path('app_candidature_index') }}" class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Mes Candidatures</a>
+										</li>
 
-								{% endif %}
-							</ul>
+									{% endif %}
+								</ul>
 
-						</div>
+							</div>
+						</li>
+
 						<li class="hover:scale-125 duration-300 py-1 hover:text-teal-400">
 							<a class="cursor-pointer" href="{{ path('app_stage_front') }}">Stages</a>
 						</li>
@@ -127,8 +130,9 @@
 										<a href="{{ path('app_mes_formations') }}" class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Mes Formations</a>
 									</li>
 									<li>
-										<a href="#" class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Paramètres</a>
+										<a href="{{ path('app_stage_index') }}" class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Mes Stages</a>
 									</li>
+
 								</ul>
 								<div class="py-2">
 									<a href="{{ path('app_logout') }}" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 dark:hover:bg-gray-600 dark:text-gray-200 dark:hover:text-white">Se déconnecter</a>
