--- a/templates/evenement/index.html.twig
+++ b/templates/evenement/index.html.twig
@@ -1,6 +1,8 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Evenement Index{% endblock %}
+{% block title %}Evenements{% endblock %}
+
+
 
 {% block content %}
     <h1 class="mb-4 text-3xl font-extrabold  text-white md:text-5xl lg:text-6xl">
