--- a/templates/evenement/show_front.html.twig
+++ b/templates/evenement/show_front.html.twig
@@ -65,7 +65,7 @@
                                 <p class="inline-flex items-center mr-3 text-sm text-gray-900 dark:text-white"><img
                                             class="mr-2 w-6 h-6 rounded-full"
                                             src="https://flowbite.com/docs/images/people/profile-picture-2.jpg"
-                                            alt="Michael Gough">{{ avi.idUtilisateur.nom ~ ' ' ~ avi.idUtilisateur.prenom }} </p>
+                                            alt="User">{{ avi.idUtilisateur.nom ~ ' ' ~ avi.idUtilisateur.prenom }} </p>
                                 <p class="text-sm text-gray-600 dark:text-gray-400 ml-3"><time pubdate datetime="2022-02-08"
                                                                                           title="February 8th, 2022">
                                     {{ ' ' ~ avi.dateCreation|date('Y-m-d')    }}</time></p>
