--- a/templates/admin/EvenementsBack.twig
+++ b/templates/admin/EvenementsBack.twig
@@ -1,22 +1,30 @@
 {% extends 'admin/AdminDashboard.html.twig' %}
 
-{% block stylesheets %}
-    {{ parent() }}
-    <style>
 
-
-    </style>
+{% block evenemnts %}
+    <li class="active">
+        <a href="{{ path('app_evenement_index') }}">
+            <i class="now-ui-icons design_bullet-list-67"></i>
+            <p>Les evenements</p>
+        </a>
+    </li>
 {% endblock %}
-
-
 
 {% block body %}
             <div class="row">
                 <div class="col-md-12">
                     <div class="card">
-                        <div class="card-header">
-                            <h4 class="card-title">
-                                Gérer les evenements:</h4>
+                        <div class="card-header d-flex justify-content-between">
+                            <div>
+                                <h4 class="card-title block">
+                                    Gérer les evenements:</h4>
+                            </div>
+                          <div>
+                              <a href="{{ path('app_evenement_new') }}" class="btn btn-warning">Ajouter Evenement</a>
+
+
+                          </div>
+
                         </div>
                         <div class="card-body">
                             <div class="table-responsive">
@@ -26,17 +34,18 @@
                                         Nom Evenement
                                     </th>
                                     <th>
-                                        Description
+                                        Déscription
                                     </th>
                                     <th>
-                                        inviter
+                                        invité
                                     </th>
                                     <th>
-                                        date
+                                        Date évènement
                                     </th>
-                                    <th>
-                                        Supprimer
+                                    <th scope="col">
+
                                     </th>
+
                                     </thead>
                                     <tbody>
                                     {% for event in evenements %}
@@ -55,17 +64,23 @@
 
                                             </td>
                                             <td>
+                                                <div class="d-flex  w-100">
+                                                    <a href="{{ path('app_evenement_edit',{'idevenement':event.idevenement}) }}" class="btn btn-primary">Modifier</a>
+                                                    <a class="ml-5">
+                                                        <form method="post" action="{{ path('app_evenement_delete', {'idevenement': event.idevenement}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
+                                                            <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ event.idevenement) }}">
+                                                            <button class="btn">
+                                                                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewbox="0 0 24 24">
+                                                                    <path d="M0 0h24v24H0V0z" fill="none"/>
+                                                                    <path d="M19 7h-3V6c0-1.1-.9-2-2-2H10c-1.1 0-2 .9-2 2v1H5v2h14V7zm-9-1h4v1h-4V6zM4.5 9h15l-1.39 12.63c-.08.69-.67 1.37-1.36 1.37H7.35c-.69 0-1.28-.68-1.36-1.37L4.5 9zm7.5 10c.92 0 1.67.75 1.67 1.67S13.92 22 13 22s-1.67-.75-1.67-1.67.75-1.67 1.67-1.67zm4.92-7l-.71-4H9.79l-.71 4h9.34z"/>
+                                                                </svg>
+                                                            </button>
+                                                        </form>
+                                                    </a>
+                                                </div>
 
-                                                <form method="post" action="{{ path('app_evenement_delete', {'idevenement': event.idevenement}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
-                                                    <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ event.idevenement) }}">
-                                                    <button class="btn">
-                                                        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewbox="0 0 24 24">
-                                                            <path d="M0 0h24v24H0V0z" fill="none"/>
-                                                            <path d="M19 7h-3V6c0-1.1-.9-2-2-2H10c-1.1 0-2 .9-2 2v1H5v2h14V7zm-9-1h4v1h-4V6zM4.5 9h15l-1.39 12.63c-.08.69-.67 1.37-1.36 1.37H7.35c-.69 0-1.28-.68-1.36-1.37L4.5 9zm7.5 10c.92 0 1.67.75 1.67 1.67S13.92 22 13 22s-1.67-.75-1.67-1.67.75-1.67 1.67-1.67zm4.92-7l-.71-4H9.79l-.71 4h9.34z"/>
-                                                        </svg>
-                                                    </button>
-                                                </form>
                                             </td>
+
 
                                         </tr>
 
@@ -73,6 +88,9 @@
                                     </tbody>
                                 </table>
                             </div>
+                        </div>
+                        <div>
+
                         </div>
                     </div>
                 </div>
