--- a/templates/admin/StageBack.twig
+++ b/templates/admin/StageBack.twig
@@ -70,7 +70,7 @@
 
 
 										<td>
-											<form method="post" action="{{ path('app_stage_delete', {'idStage': stage.idStage}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
+											<form method="post" action="{{ path('app_stage_delete', {'idStage': stage.idStage}) }}" onsubmit="return confirm('Êtes-vous sûr de vouloir supprimer cet élément ?');">
 												<input type="hidden" name="_token" value="{{ csrf_token('delete' ~ stage.idStage) }}">
 												<button class="btn">
 													<svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewbox="0 0 24 24">
