--- a/templates/evenement/edit.html.twig
+++ b/templates/evenement/edit.html.twig
@@ -1,15 +1,55 @@
-{% extends 'base.html.twig' %}
+{% extends 'admin/AdminDashboard.html.twig' %}
 
 {% block title %}Edit Evenement{% endblock %}
 
-{% block content %}
-    <h1 class="mb-4 text-3xl font-extrabold  text-white md:text-5xl lg:text-6xl">
-        Modifier
-        <span class="text-transparent bg-clip-text bg-gradient-to-r to-emerald-600 from-sky-400">l'évènement</span>
-    </h1>
 
-    {{ include('evenement/_form.html.twig', {'button_label': 'Valider'}) }}
+{% block body %}
 
-    <a href="{{ path('app_evenement_show', {'idevenement': evenement.idevenement}) }}">Retour</a>
+
+    <div class="container mx-auto px-4 py-4">
+        <div class="my-4 px-4">
+            <div class="text-center">
+                <h1 class="font-weight-bold text-center text-primary display-1">Modifier un evenement</h1>
+            </div>
+                {{ form_start(form) }}
+                <div class="form-group text-primary">
+                    {{ form_label(form.nomevenement, 'Nom évènement', {'label_attr': {'class': 'text-primary', 'style': 'color: black;' }}) }}
+
+
+                    {{ form_widget(form.nomevenement, {'attr': {'class': 'form-control', 'style': 'background-color: white;'}}) }}
+                    {{ form_errors(form.nomevenement) }}
+                </div>
+                <div class="form-group">
+                    {{ form_label(form.dateevenement, 'Date évènement', {'label_attr': {'class': 'text-primary', 'style': 'color: black;' }}) }}
+                    {{ form_widget(form.dateevenement, {'attr': {'class': 'form-control'}}) }}
+                    {{ form_errors(form.dateevenement) }}
+                </div>
+                <div class="form-group">
+                    {{ form_label(form.inviter,'Invité', {'label_attr': {'class': 'text-primary', 'style': 'color: black;' }}) }}
+                    {{ form_widget(form.inviter, {'attr': {'class': 'form-control', 'style': 'background-color: white;'}}) }}
+                    {{ form_errors(form.inviter) }}
+                </div>
+                <div class="form-group">
+                    {{ form_label(form.descriptionevenement,'Description', {'label_attr': {'class': 'text-primary', 'style': 'color: black;' }}) }}
+                    {{ form_widget(form.descriptionevenement, {'attr': {'class': 'form-control', 'style': 'background-color: white;'}}) }}
+                    {{ form_errors(form.descriptionevenement) }}
+                </div>
+
+
+                <div class="form-group">
+                    <button class="btn btn-primary" type="submit">Modifier</button>
+                </div>
+                {{ form_end(form) }}
+
+        </div>
+    </div>
+
 
 {% endblock %}
+
+
+
+
+
+
+
