--- a/templates/reclamation/messages.html.twig
+++ b/templates/reclamation/messages.html.twig
@@ -3,7 +3,7 @@
 {% block title %}Messages{% endblock %}
 
 {% block content %}
-    <h1 class="text-2xl font-bold mb-4">Messages</h1>
+    <h1 class="text-2xl font-bold mb-4 text-white">Messages</h1>
 
 <div class="w-1/2">
   <table class="table-auto w-full border border-gray-300 rounded-lg overflow-hidden">
@@ -35,7 +35,6 @@
     <div class="mt-6 w-1/2 mx-auto">
         {{ form_start(form) }}
         {{ form_row(form.avis, {'attr': {'class': 'border border-gray-300 rounded-lg py-2 px-4 block w-full focus:outline-none focus:border-blue-500', 'placeholder': 'Ajouter votre avis ici'}}) }}
-        <button type="submit" class="bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600 transition-colors duration-200">Submit</button>
         {{ form_end(form) }}
     </div>
 {% endblock %}
